Drop extraconfig for neutron-plumgrid.yaml
This patch drops the extraconfig interface in favor
of using the composable services nested stack instead.

The benefit is that it is easier to enable multiple services
(like network and storage backends at the same time) and all
of the plumgrid settings get to live in the same file.

Partially-implements: blueprint composable-services-within-roles

Change-Id: I1c5827e3650a29f7a0258531f84ae0f50f22343d

--- a/puppet/services/neutron-plugin-plumgrid.yaml
+++ b/puppet/services/neutron-plugin-plumgrid.yaml
@@ -22,6 +22,60 @@ parameters:
     type: string
     hidden: true
 
+  # PLUMgrid specific settings
+  PLUMgridDirectorServer:
+    description: IP address of the PLUMgrid Director Server
+    type: string
+    default: 127.0.0.1
+  PLUMgridDirectorServerPort:
+    description: Port of the PLUMgrid Director Server
+    type: string
+    default: 443
+  PLUMgridUsername:
+    description: Username for PLUMgrid platform
+    type: string
+  PLUMgridPassword:
+    description: Password for PLUMgrid platform
+    type: string
+    hidden: true
+  PLUMgridNovaMetadataIP:
+    description: IP address of Nova Metadata
+    type: string
+    default: 169.254.169.254
+  PLUMgridNovaMetadataPort:
+    description: Port of Nova Metadata
+    type: string
+    default: 8775
+  PLUMgridL2GatewayVendor:
+    description: Vendor for L2 Gateway Switch
+    type: string
+    default: vendor
+  PLUMgridL2GatewayUsername:
+    description: Username for L2 Gateway Switch
+    type: string
+    default: username
+  PLUMgridL2GatewayPassword:
+    description: Password for L2 Gateway Switch
+    type: string
+    hidden: true
+  PLUMgridIdentityVersion:
+    description: Keystone Identity version
+    type: string
+    default: v2.0
+  PLUMgridConnectorType:
+    description: Neutron Network Connector Type
+    type: string
+    default: distributed
+  PLUMgridNeutronPluginVersion:
+    description: PLUMgrid Neutron Plugin version
+    type: string
+    default: present
+  PLUMgridPlumlibVersion:
+    description: PLUMgrid Plumlib version
+    type: string
+    default: present
+
+
 outputs:
   role_data:
     description: Role data for the Neutron Plumgrid plugin
@@ -39,5 +93,19 @@ outputs:
         neutron::plugins::plumgrid::controller_priv_host: {get_param: [EndpointMap, KeystoneAdmin, host]}
         neutron::plugins::plumgrid::admin_password: {get_param: AdminPassword}
         neutron::plugins::plumgrid::metadata_proxy_shared_secret: {get_param: NeutronMetadataProxySharedSecret}
+        neutron::plugins::plumgrid::director_server: {get_param: PLUMgridDirectorServer}
+        neutron::plugins::plumgrid::director_server_port: {get_param: PLUMgridDirectorServerPort}
+        neutron::plugins::plumgrid::username: {get_param: PLUMgridUsername}
+        neutron::plugins::plumgrid::password: {get_param: PLUMgridPassword}
+        neutron::plugins::plumgrid::nova_metadata_ip: {get_param: PLUMgridNovaMetadataIP}
+        neutron::plugins::plumgrid::nova_metadata_port: {get_param: PLUMgridNovaMetadataPort}
+        neutron::plugins::plumgrid::l2gateway_vendor: {get_param: PLUMgridL2GatewayVendor}
+        neutron::plugins::plumgrid::l2gateway_sw_username: {get_param: PLUMgridL2GatewayUsername}
+        neutron::plugins::plumgrid::l2gateway_sw_password: {get_param: PLUMgridL2GatewayPassword}
+        neutron::plugins::plumgrid::connector_type: {get_param: PLUMgridConnectorType}
+        neutron::plugins::plumgrid::identity_version: {get_param: PLUMgridIdentityVersion}
+        neutron::plugins::plumgrid::package_ensure: {get_param: PLUMgridNeutronPluginVersion}
+        neutron::plugins::plumgrid::plumlib_package_ensure: {get_param: PLUMgridPlumlibVersion}
+
       step_config: |
         include tripleo::profile::base::neutron::plugins::plumgrid
