set aodh auth_url explicitly
Aodh puppet module defaults the auth_url to localhost
this could cause issues when handling gnocchi* alarms.
Fix to set the explicitly in the templates.

Closes-bug: #1590589

Change-Id: Ib93a3381f3f24efea6a1cf713171cc1a259ee7d0

--- a/puppet/controller.yaml
+++ b/puppet/controller.yaml
@@ -1240,6 +1240,7 @@ resources:
                 aodh::api::keystone_password: {get_input: aodh_password}
                 aodh::api::keystone_auth_uri: {get_input: keystone_auth_uri}
                 aodh::api::keystone_identity_uri: {get_input: keystone_identity_uri}
+                aodh::auth::auth_url: {get_input: keystone_auth_uri}
                 aodh::auth::auth_password: {get_input: aodh_password}
                 aodh::db::mysql::password: {get_input: aodh_password}
                 # for a migration path from ceilometer-alarm to aodh, we use the same database & coordination
