Replace no-op TLS stacks with OS::Heat::None
These stacks effectively do nothing. So better replace them with
the None resource.

Change-Id: If1fc759ca7f03f66229c27560cc4b8e10baa0f11

--- a/overcloud-resource-registry-puppet.yaml
+++ b/overcloud-resource-registry-puppet.yaml
@@ -38,8 +38,8 @@ resource_registry:
   # NodeExtraConfig == All nodes configuration pre service deployment
   # NodeExtraConfigPost == All nodes configuration post service deployment
   OS::TripleO::NodeUserData: firstboot/userdata_default.yaml
-  OS::TripleO::NodeTLSCAData: puppet/extraconfig/tls/no-ca.yaml
-  OS::TripleO::NodeTLSData: puppet/extraconfig/tls/no-tls.yaml
+  OS::TripleO::NodeTLSCAData: OS::Heat::None
+  OS::TripleO::NodeTLSData: OS::Heat::None
   OS::TripleO::ControllerExtraConfigPre: puppet/extraconfig/pre_deploy/default.yaml
   OS::TripleO::ComputeExtraConfigPre: puppet/extraconfig/pre_deploy/default.yaml
   OS::TripleO::CephStorageExtraConfigPre: puppet/extraconfig/pre_deploy/default.yaml
