Customize the reservation of memory for host processes
Allows the operator to alter the memory reservation for host processes

Implements: blueprint tripleo-ovs-dpdk

Change-Id: If7a099cde2e8854a14a75c1304620cc444eefcf2
Signed-off-by: karthik s <ksundara@redhat.com>

--- a/puppet/services/nova-compute.yaml
+++ b/puppet/services/nova-compute.yaml
@@ -60,6 +60,13 @@ parameters:
       Ex. NovaVcpuPinSet: ['4-12','^8'] will reserve cores from 4-12 excluding 8
     type: comma_delimited_list
     default: []
+  NovaReservedHostMemory:
+    description: >
+      Reserved RAM for host processes.
+    type: number
+    default: 2048
+    constraints:
+      - range: { min: 512 }
 
 resources:
   NovaBase:
@@ -84,6 +91,7 @@ outputs:
                 params:
                   JSON_PARAM: {get_param: NovaPCIPassthrough}
             nova::compute::vcpu_pin_set: {get_param: NovaVcpuPinSet}
+            nova::compute::reserved_host_memory: {get_param: NovaReservedHostMemory}
             # we manage migration in nova common puppet profile
             nova::compute::libvirt::migration_support: false
             tripleo::profile::base::nova::manage_migration: true
@@ -108,11 +116,6 @@ outputs:
             # encryption work will obsolete the need to use TUNNELLED transport
             # mode.
             nova::migration::live_migration_tunnelled: {get_param: NovaEnableRbdBackend}
-            # Changing the default from 512MB. The current templates can not deploy
-            # overclouds with swap. On an idle compute node, we see ~1024MB of RAM
-            # used. 2048 is suggested to account for other possible operations for
-            # example openvswitch.
-            nova::compute::reserved_host_memory: 2048
             nova::compute::neutron::libvirt_vif_driver: {get_param: NovaComputeLibvirtVifDriver}
             # NOTE: bind IP is found in Heat replacing the network name with the
             # local node IP for the given network; replacement examples
