Split Heat pacemaker roles into separate services
In order for each service to operate independently when used with Pacemaker,
the roles needed to be separated.

Change-Id: I0440b7b119fc9b7bb3db8a2bf341c0c6db8d3d33
Depends-On: I3fa76562c13191884a53848ad5adcbc9f5a24f61

--- a/puppet/services/pacemaker/heat-api-cfn.yaml
+++ b/puppet/services/pacemaker/heat-api-cfn.yaml
@@ -25,7 +25,5 @@ outputs:
           - get_attr: [HeatApiCfnBase, role_data, config_settings]
           - heat::api_cfn::manage_service: false
             heat::api_cfn::enabled: false
-      step_config:
-        # No puppet manifests since heat-api-cfn is included in
-        # ::tripleo::profile::pacemaker::heat which is maintained alongside of
-        # pacemaker/heat-api.yaml.
+      step_config: |
+        include ::tripleo::profile::pacemaker::heat::api_cfn
