--- a/puppet/services/pacemaker/heat-api-cloudwatch.yaml
+++ b/puppet/services/pacemaker/heat-api-cloudwatch.yaml
@@ -25,7 +25,5 @@ outputs:
            - get_attr: [HeatApiCloudwatchBase, role_data, config_settings]
            - heat::api_cloudwatch::manage_service: false
              heat::api_cloudwatch::enabled: false
-      step_config:
-        # No puppet manifests since heat-api-cloudwatch is included in
-        # ::tripleo::profile::pacemaker::heat which is maintained alongside of
-        # pacemaker/heat-api.yaml.
+      step_config: |
+        include ::tripleo::profile::pacemaker::heat::api_cloudwatch
