--- a/puppet/services/pacemaker/heat-api.yaml
+++ b/puppet/services/pacemaker/heat-api.yaml
@@ -26,4 +26,4 @@ outputs:
           - heat::api::manage_service: false
             heat::api::enabled: false
       step_config: |
-        include ::tripleo::profile::pacemaker::heat
+        include ::tripleo::profile::pacemaker::heat::api
