--- a/puppet/services/pacemaker/heat-engine.yaml
+++ b/puppet/services/pacemaker/heat-engine.yaml
@@ -26,7 +26,5 @@ outputs:
           - get_attr: [HeatEngineBase, role_data, config_settings]
           - heat::engine::manage_service: false
             heat::engine::enabled: false
-      step_config:
-        # No puppet manifests since heat-engine is included in
-        # ::tripleo::profile::pacemaker::heat which is maintained alongside of
-        # pacemaker/heat-api.yaml.
+      step_config: |
+        include ::tripleo::profile::pacemaker::heat::engine
