Customize "supported_pci_vendor_devs" for SR-IOV
Allows the operator to configure the NIC vendor’s product ID, if
it differs from the default supported NICs.

By default Intel & Mellanox SR-IOV capable NICs are supported

Change-Id: I9b49ae04cc292ed125eeef30033e566e8f849626
Implements: blueprint tripleo-sriov
Signed-off-by: karthik s <ksundara@redhat.com>

--- a/puppet/services/neutron-plugin-ml2.yaml
+++ b/puppet/services/neutron-plugin-ml2.yaml
@@ -51,7 +51,12 @@ parameters:
     default: 'vxlan'
     description: The tenant network type for Neutron.
     type: comma_delimited_list
-
+  NeutronSupportedPCIVendorDevs:
+    description: |
+        List of supported pci vendor devices in the format VendorID:ProductID.
+        By default Intel & Mellanox SR-IOV capable NICs are supported.
+    type: comma_delimited_list
+    default: ['15b3:1004','8086:10ca']
 resources:
 
   NeutronBase:
@@ -104,6 +109,7 @@ outputs:
                 template: TYPES
                 params:
                   TYPES: {get_param: NeutronNetworkType}
+            neutron::plugins::ml2::supported_pci_vendor_devs: {get_param: NeutronSupportedPCIVendorDevs}
 
       step_config: |
         include ::tripleo::profile::base::neutron::plugins::ml2
