Enable nova-compute as a composable service
Implement NovaCompute service using nova-base for common parameters.

Depends-On: I57f729daf675674ce37b49e17652c575715fbe23
Implements: blueprint composable-services-within-roles
Change-Id: I4494a94a3813d255b9f2d5a18874efd6a63737df

--- a/overcloud-resource-registry-puppet.yaml
+++ b/overcloud-resource-registry-puppet.yaml
@@ -152,6 +152,7 @@ resource_registry:
   OS::TripleO::Services::NovaScheduler: puppet/services/nova-scheduler.yaml
   OS::TripleO::Services::NovaConsoleauth: puppet/services/nova-consoleauth.yaml
   OS::TripleO::Services::NovaVncproxy: puppet/services/nova-vncproxy.yaml
+  OS::TripleO::Services::NovaCompute: puppet/services/nova-compute.yaml
 
 parameter_defaults:
   EnablePackageInstall: false
