--- a/overcloud.yaml
+++ b/overcloud.yaml
@@ -600,7 +600,8 @@ parameters:
     type: comma_delimited_list
 
   ComputeServices:
-    default: []
+    default:
+      - OS::TripleO::Services::NovaCompute
     description: A list of service resources (configured in the Heat
                  resource_registry) which represent nested stacks
                  for each service that should get installed on the Compute Nodes.
