--- a/puppet/services/neutron-plugin-opencontrail.yaml
+++ b/puppet/services/neutron-plugin-opencontrail.yaml
@@ -9,6 +9,29 @@ parameters:
     description: Mapping of service endpoint -> protocol. Typically set
                  via parameter_defaults in the resource registry.
     type: json
+  AdminPassword:
+    description: The password for the keystone admin account, used for monitoring, querying neutron etc.
+    type: string
+    hidden: true
+  AdminToken:
+    description: The keystone auth secret and db password.
+    type: string
+    hidden: true
+  ContrailApiServerIp:
+    description: IP address of the OpenContrail API server
+    type: string
+  ContrailApiServerPort:
+    description: Port of the OpenContrail API
+    type: string
+    default: 8082
+  ContrailMultiTenancy:
+    description: Whether to enable multi tenancy
+    type: boolean
+    default: false
+  ContrailExtensions:
+    description: List of OpenContrail extensions to be enabled
+    type: comma_delimited_list
+    default: ''
 
 resources:
 
@@ -22,5 +45,16 @@ outputs:
       config_settings:
         map_merge:
           - get_attr: [NeutronBase, role_data, config_settings]
+          - neutron::api_extensions_path: /usr/lib/python2.7/site-packages/neutron_plugin_contrail/extensions
+
+            neutron::plugins::opencontrail::api_server_ip: {get_param: ContrailApiServerIp}
+            neutron::plugins::opencontrail::api_server_port: {get_param: ContrailApiServerPort}
+            neutron::plugins::opencontrail::multi_tenancy: {get_param: ContrailMultiTenancy}
+            neutron::plugins::opencontrail::contrail_extensions: {get_param: ContrailExtensions}
+            neutron::plugins::opencontrail::keystone_auth_url: {get_param: [EndpointMap, KeystoneInternal, uri] }
+            neutron::plugins::opencontrail::keystone_admin_user: admin
+            neutron::plugins::opencontrail::keystone_admin_tenant_name: admin
+            neutron::plugins::opencontrail::keystone_admin_password: {get_param: AdminPassword}
+            neutron::plugins::opencontrail::keystone_admin_token: {get_param: AdminToken}
       step_config: |
         include tripleo::profile::base::neutron::plugins::opencontrail
