Change Aodh to use own backend
Currently aodh uses ceilometer backend, instead
change it to use its own mysql db.

Change-Id: Idaa879af4e6946e804111d581402e620beb89885

--- a/puppet/controller.yaml
+++ b/puppet/controller.yaml
@@ -694,6 +694,15 @@ resources:
               - '@'
               - {get_param: [EndpointMap, MysqlInternal, host]}
               - '/gnocchi'
+        aodh_dsn:
+          list_join:
+            - ''
+            - - {get_param: [EndpointMap, MysqlInternal, protocol]}
+              - '://aodh:'
+              - {get_param: AodhPassword}
+              - '@'
+              - {get_param: [EndpointMap, MysqlInternal, host]}
+              - '/aodh'
         gnocchi_internal_url: {get_param: [EndpointMap, GnocchiInternal, uri]}
         gnocchi_public_url: { get_param: [ EndpointMap, GnocchiPublic, uri ] }
         gnocchi_admin_url: { get_param: [ EndpointMap, GnocchiAdmin, uri ] }
@@ -962,6 +971,7 @@ resources:
                 snmpd_readonly_user_password: {get_input: snmpd_readonly_user_password}
 
                 # Aodh
+                aodh_mysql_conn_string: {get_input: aodh_dsn}
                 aodh::rabbit_userid: {get_input: rabbit_username}
                 aodh::rabbit_password: {get_input: rabbit_password}
                 aodh::rabbit_use_ssl: {get_input: rabbit_client_use_ssl}
