--- a/puppet/hieradata/database.yaml
+++ b/puppet/hieradata/database.yaml
@@ -69,6 +69,15 @@ gnocchi::db::mysql::allowed_hosts:
   - '%'
   - "%{hiera('mysql_bind_host')}"
 
+# Aodh
+aodh::db::mysql::user: aodh
+aodh::db::mysql::host: "%{hiera('mysql_virtual_ip')}"
+aodh::db::mysql::dbname: aodh
+aodh::db::mysql::allowed_hosts:
+  - '%'
+  - "%{hiera('mysql_bind_host')}"
+
+
 sahara::db::mysql::user: sahara
 sahara::db::mysql::host: "%{hiera('mysql_virtual_ip')}"
 sahara::db::mysql::dbname: sahara
