--- a/puppet/compute.yaml
+++ b/puppet/compute.yaml
@@ -500,6 +500,10 @@ resources:
                 nova::rabbit_port: {get_input: rabbit_client_port}
                 nova::upgrade_level_compute: {get_input: upgrade_level_nova_compute}
                 nova_compute_driver: {get_input: nova_compute_driver}
+                # TODO(emilien): move libvirt & migration parameters in libvirt profile
+                # used to deploy libvirt/kvm dependencies:
+                nova::compute::libvirt::services::libvirt_virt_type: {get_input: nova_compute_libvirt_type}
+                # used to configured nova.conf:
                 nova::compute::libvirt::libvirt_virt_type: {get_input: nova_compute_libvirt_type}
                 nova::compute::neutron::libvirt_vif_driver: {get_input: nova_compute_libvirt_vif_driver}
                 nova_api_host: {get_input: nova_api_host}
