--- a/puppet/services/nova-libvirt.yaml
+++ b/puppet/services/nova-libvirt.yaml
@@ -1,7 +1,7 @@
 heat_template_version: 2016-04-08
 
 description: >
-  OpenStack Nova Compute service configured with Puppet
+  Libvirt service configured with Puppet
 
 parameters:
   EndpointMap:
@@ -16,18 +16,16 @@ resources:
 
 outputs:
   role_data:
-    description: Role data for the Nova Compute service.
+    description: Role data for the Libvirt service.
     value:
       config_settings:
         map_merge:
           - get_attr: [NovaBase, role_data, config_settings]
+          # we include ::nova::compute::libvirt::services in nova/libvirt profile
           - nova::compute::libvirt::manage_libvirt_services: false
           # we manage migration in nova common puppet profile
             nova::compute::libvirt::migration_support: false
             tripleo::profile::base::nova::manage_migration: true
-            tripleo::profile::base::nova::nova_compute_enabled: true
+            tripleo::profile::base::nova::libvirt_enabled: true
       step_config: |
-        # TODO(emilien): figure how to deal with libvirt profile.
-        # We'll probably threat it like we do with Neutron plugins.
-        # Until then, just include it in the default nova-compute role.
-        include tripleo::profile::base::nova::compute::libvirt
+        include tripleo::profile::base::nova::libvirt
