Allow pacemaker ports in firewall
This is required to allow ha deployments with ManageFirewall: True
These are the ports documented in [1].

1: https://access.redhat.com/documentation/en-US/Red_Hat_Enterprise_Linux/6/html-single/Configuring_the_Red_Hat_High_Availability_Add-On_with_Pacemaker/index.html#s1-firewalls-HAAR

Change-Id: I446cc0ed863df15e28fa8ec1f5e2a06c5c03af8c
Closes-Bug: 1594470
(cherry picked from commit a4c9e1b9f64544e5be971481e2df205dc6f7634b)

--- a/puppet/hieradata/controller.yaml
+++ b/puppet/hieradata/controller.yaml
@@ -282,3 +282,12 @@ tripleo::firewall::firewall_rules:
     port:
       - 8041
       - 13041
+  '130 pacemaker tcp':
+    proto: 'tcp'
+    dport:
+      - 2224
+      - 3121
+      - 21064
+  '131 pacemaker udp':
+    proto: 'udp'
+    dport: 5405
