Add StepConfig to docker compute-post.yaml
Change I84c97a76159704c2d6c963bc4b26e365764b1366 missed
`docker/compute-post.yaml`.

Change-Id: I680eabf2f316c7fccc9d53d75dc16139c9959c64

--- a/docker/compute-post.yaml
+++ b/docker/compute-post.yaml
@@ -38,6 +38,11 @@ parameters:
   NeutronOpenvswitchAgentOvsVolume:
     type: string
     default: " "
+  StepConfig:
+    type: string
+    description: Config manifests that will be used to step through the deployment.
+    default: ''
+
 
 resources:
 
@@ -56,7 +61,11 @@ resources:
       outputs:
       - name: result
       config:
-        get_file: ../puppet/manifests/overcloud_compute.pp
+        list_join:
+        - ''
+        - - get_file: ../puppet/manifests/overcloud_compute.pp
+          - {get_param: StepConfig}
+
 
   ComputePuppetDeployment:
     type: OS::Heat::SoftwareDeployments
