Stop passing charset=utf8 for neutron database connection option
This option belongs to oslo.db, and oslo.db enforces UTF-8 for
client connections since I676c9c5e418905160e4ab647b8a0f2fb601e8962 that
is included since Kilo. Neutron switched to the library in Kilo too
(I1ccf896922a5a762d37a1a3b93c56c8b8ae8c085).

I guess it's time to remove this hardcoded charset and allow oslo.db to
do the right thing.

Change-Id: I7d6ffa734374aeaf6fa6a7d98048bbbdfbeb412a

--- a/puppet/services/neutron-plugin-plumgrid.yaml
+++ b/puppet/services/neutron-plugin-plumgrid.yaml
@@ -89,7 +89,7 @@ outputs:
               - {get_param: NeutronPassword}
               - '@'
               - {get_param: [EndpointMap, MysqlInternal, host]}
-              - '/ovs_neutron?charset=utf8'
+              - '/ovs_neutron'
         neutron::plugins::plumgrid::controller_priv_host: {get_param: [EndpointMap, KeystoneAdmin, host]}
         neutron::plugins::plumgrid::admin_password: {get_param: AdminPassword}
         neutron::plugins::plumgrid::metadata_proxy_shared_secret: {get_param: NeutronMetadataProxySharedSecret}
