--- a/puppet/services/neutron-server.yaml
+++ b/puppet/services/neutron-server.yaml
@@ -50,7 +50,7 @@ outputs:
                   - {get_param: NeutronPassword}
                   - '@'
                   - {get_param: [EndpointMap, MysqlInternal, host]}
-                  - '/ovs_neutron?charset=utf8'
+                  - '/ovs_neutron'
             neutron::server::auth_uri: {get_param: [EndpointMap, KeystoneInternal, uri] }
             neutron::server::auth_url: {get_param: [EndpointMap, KeystoneAdmin, uri_no_suffix]}
             neutron::server::identity_uri: { get_param: [EndpointMap, KeystoneAdmin, uri_no_suffix] }
