Stop using deprecated port param in firewall rules
This has been removed by the puppet-firewall module in favor of
explicit dport and sport params.  I believe in every case we are
intending to set dport, so that's what this change does.

Change-Id: I35c9efca691f865f2e2562ee81a7195d48d27d7a

--- a/puppet/hieradata/controller.yaml
+++ b/puppet/hieradata/controller.yaml
@@ -186,13 +186,13 @@ controller_classes: []
 # firewall
 tripleo::firewall::firewall_rules:
   '101 mongodb_config':
-    port: 27019
+    dport: 27019
   '102 mongodb_sharding':
-    port: 27018
+    dport: 27018
   '103 mongod':
-    port: 27017
+    dport: 27017
   '104 mysql galera':
-    port:
+    dport:
       - 873
       - 3306
       - 4444
@@ -200,37 +200,37 @@ tripleo::firewall::firewall_rules:
       - 4568
       - 9200
   '105 ntp':
-    port: 123
+    dport: 123
     proto: udp
   '106 vrrp':
     proto: vrrp
   '107 haproxy stats':
-    port: 1993
+    dport: 1993
   '108 redis':
-    port:
+    dport:
       - 6379
       - 26379
   '109 rabbitmq':
-    port:
+    dport:
       - 5672
       - 35672
   '110 ceph':
-    port:
+    dport:
       - 6789
       - '6800-6810'
   '111 keystone':
-    port:
+    dport:
       - 5000
       - 13000
       - 35357
       - 13357
   '112 glance':
-    port:
+    dport:
       - 9292
       - 9191
       - 13292
   '113 nova':
-    port:
+    dport:
       - 6080
       - 13080
       - 8773
@@ -239,43 +239,43 @@ tripleo::firewall::firewall_rules:
       - 13774
       - 8775
   '114 neutron server':
-    port:
+    dport:
       - 9696
       - 13696
   '115 neutron dhcp input':
     proto: 'udp'
-    port: 67
+    dport: 67
   '116 neutron dhcp output':
     proto: 'udp'
     chain: 'OUTPUT'
-    port: 68
+    dport: 68
   '118 neutron vxlan networks':
     proto: 'udp'
-    port: 4789
+    dport: 4789
   '119 cinder':
-    port:
+    dport:
       - 8776
       - 13776
   '120 iscsi initiator':
-    port: 3260
+    dport: 3260
   '121 memcached':
-    port: 11211
+    dport: 11211
   '122 swift proxy':
-    port:
+    dport:
       - 8080
       - 13808
   '123 swift storage':
-    port:
+    dport:
       - 873
       - 6000
       - 6001
       - 6002
   '124 ceilometer':
-    port:
+    dport:
       - 8777
       - 13777
   '125 heat':
-    port:
+    dport:
       - 8000
       - 13800
       - 8003
@@ -283,17 +283,17 @@ tripleo::firewall::firewall_rules:
       - 8004
       - 13004
   '126 horizon':
-    port:
+    dport:
       - 80
       - 443
   '127 snmp':
-    port: 161
+    dport: 161
     proto: 'udp'
   '128 aodh':
-    port:
+    dport:
       - 8042
       - 13042
   '129 gnocchi-api':
-    port:
+    dport:
       - 8041
       - 13041
