Allow sahara ports in firewall
Both with and without SSL.

Change-Id: I3163cbac8cb37e03ae298fa02e85bdaa66157471
(cherry picked from commit dc0562cc7faff6f7f0876551613e71e35153494d)
(cherry picked from commit ea57876f8ec5f3b84611c0dfc891c3916931f85b)

--- a/puppet/hieradata/controller.yaml
+++ b/puppet/hieradata/controller.yaml
@@ -256,3 +256,7 @@ tripleo::firewall::firewall_rules:
   '131 pacemaker udp':
     proto: 'udp'
     dport: 5405
+  '132 sahara':
+    dport:
+      - 8386
+      - 13386
