Composable roles within services - NTP - Compute
Add NTP as a composable service for compute nodes.

Partially-implements: blueprint composable-services-within-roles

Change-Id: I53958a660830211dee731e0129f4ff018c0cd853

--- a/overcloud.yaml
+++ b/overcloud.yaml
@@ -604,6 +604,7 @@ parameters:
   ComputeServices:
     default:
       - OS::TripleO::Services::NovaCompute
+      - OS::TripleO::Services::Ntp
     description: A list of service resources (configured in the Heat
                  resource_registry) which represent nested stacks
                  for each service that should get installed on the Compute Nodes.
@@ -976,7 +977,6 @@ resources:
           NovaPassword: {get_param: NovaPassword}
           NovaOVSBridge: {get_param: NovaOVSBridge}
           NovaSecurityGroupAPI: {get_param: NovaSecurityGroupAPI}
-          NtpServer: {get_param: NtpServer}
           RabbitHost: {get_attr: [VipMap, net_ip_map, {get_param: [ServiceNetMap, RabbitMqNetwork]}]}
           RabbitPassword: {get_param: RabbitPassword}
           RabbitUserName: {get_param: RabbitUserName}
