Composable roles within services - NTP - CephStorage
Add NTP as a composable service for CephStorage.

Partially-implements: blueprint composable-services-within-roles

Change-Id: Iee89b261b3c45f596ad84549e25d47b8ca1cfbdb

--- a/overcloud.yaml
+++ b/overcloud.yaml
@@ -690,7 +690,8 @@ parameters:
     description: Optional scheduler hints to pass to nova
     default: {}
   CephStorageServices:
-    default: []
+    default:
+      - OS::TripleO::Services::Ntp
     description: A list of service resources (configured in the Heat
                  resource_registry) which represent nested stacks
                  for each service that should get installed on the CephStorage nodes.
@@ -1099,7 +1100,6 @@ resources:
           Image: {get_param: CephStorageImage}
           KeyName: {get_param: KeyName}
           Flavor: {get_param: OvercloudCephStorageFlavor}
-          NtpServer: {get_param: NtpServer}
           ServiceNetMap: {get_param: ServiceNetMap}
           TimeZone: {get_param: TimeZone}
           UpdateIdentifier: {get_param: UpdateIdentifier}
