Composable Timezone service - Controller
Add timezone as a composable service

Change-Id: I99f0b0727a10ee74ea1de0499c8bc3ba37ab3345
Partially-implements: blueprint composable-services-within-roles

--- a/overcloud.yaml
+++ b/overcloud.yaml
@@ -266,6 +266,7 @@ parameters:
         Control the IP allocation for the StorageMgmgVirtualInterface port. E.g.
         [{'ip_address':'1.2.3.4'}]
     type: json
+  #TODO(ccamacho):Remove after landing composable timezone for all nodes
   TimeZone:
     default: 'UTC'
     description: The timezone to be set on nodes.
@@ -567,6 +568,7 @@ parameters:
       - OS::TripleO::Services::SwiftProxy
       - OS::TripleO::Services::SwiftStorage
       - OS::TripleO::Services::Snmp
+      - OS::TripleO::Services::Timezone
     description: A list of service resources (configured in the Heat
                  resource_registry) which represent nested stacks
                  for each service that should get installed on the Controllers.
@@ -866,7 +868,6 @@ resources:
           SwiftMinPartHours: {get_param: SwiftMinPartHours}
           SwiftPartPower: {get_param: SwiftPartPower}
           SwiftReplicas: { get_param: SwiftReplicas}
-          TimeZone: {get_param: TimeZone}
           ServiceNetMap: {get_param: ServiceNetMap}
           EndpointMap: {get_attr: [EndpointMap, endpoint_map]}
           MysqlVirtualIP: {get_attr: [VipMap, net_ip_map, {get_param: [ServiceNetMap, MysqlNetwork]}]}
