--- a/overcloud.yaml
+++ b/overcloud.yaml
@@ -576,6 +576,7 @@ parameters:
 
   ComputeServices:
     default:
+      - OS::TripleO::Services::Timezone
       - OS::TripleO::Services::NovaCompute
       - OS::TripleO::Services::Ntp
       - OS::TripleO::Services::Snmp
@@ -950,7 +951,6 @@ resources:
           RabbitClientUseSSL: {get_param: RabbitClientUseSSL}
           RabbitClientPort: {get_param: RabbitClientPort}
           ServiceNetMap: {get_param: ServiceNetMap}
-          TimeZone: {get_param: TimeZone}
           EndpointMap: {get_attr: [EndpointMap, endpoint_map]}
           UpdateIdentifier: {get_param: UpdateIdentifier}
           Hostname:
