Composable Timezone service - CephStorage
Add timezone as a composable service

Change-Id: I1569b2ebdca8e67c0e92a5c0e3fadd12006cc02a
Partially-implements: blueprint composable-services-within-roles

--- a/overcloud.yaml
+++ b/overcloud.yaml
@@ -677,6 +677,7 @@ parameters:
   CephStorageServices:
     default:
       - OS::TripleO::Services::Ntp
+      - OS::TripleO::Services::Timezone
     description: A list of service resources (configured in the Heat
                  resource_registry) which represent nested stacks
                  for each service that should get installed on the CephStorage nodes.
@@ -1056,7 +1057,6 @@ resources:
           KeyName: {get_param: KeyName}
           Flavor: {get_param: OvercloudCephStorageFlavor}
           ServiceNetMap: {get_param: ServiceNetMap}
-          TimeZone: {get_param: TimeZone}
           UpdateIdentifier: {get_param: UpdateIdentifier}
           Hostname:
             str_replace:
