Composable Timezone service - ObjectStorage
Add timezone as a composable service

Change-Id: I5bed49e1f8b803fb6d9d0b06165a38f61b132431
Partially-implements: blueprint composable-services-within-roles

--- a/overcloud.yaml
+++ b/overcloud.yaml
@@ -644,6 +644,7 @@ parameters:
       - OS::TripleO::Services::Ntp
       - OS::TripleO::Services::SwiftStorage
       - OS::TripleO::Services::Snmp
+      - OS::TripleO::Services::Timezone
     description: A list of service resources (configured in the Heat
                  resource_registry) which represent nested stacks
                  for each service that should get installed on the ObjectStorage nodes.
@@ -1022,7 +1023,6 @@ resources:
           PartPower: {get_param: SwiftPartPower}
           Image: {get_param: SwiftStorageImage}
           Replicas: { get_param: SwiftReplicas}
-          TimeZone: {get_param: TimeZone}
           UpdateIdentifier: {get_param: UpdateIdentifier}
           ServiceNetMap: {get_param: ServiceNetMap}
           Hostname:
