Ceilometer Compute Agent composable service
Implement the service for ceilometer agent compute.

Change-Id: I5ab3887832588ce26e2d258d05f725d87d2c103d

--- a/overcloud.yaml
+++ b/overcloud.yaml
@@ -271,12 +271,6 @@ parameters:
     description: How many replicas to use in the swift rings.
 
 # Compute-specific params
-  CeilometerComputeAgent:
-    description: Indicates whether the Compute agent is present and expects nova-compute to be configured accordingly
-    type: string
-    default: ''
-    constraints:
-    - allowed_values: ['', Present]
   ComputeCount:
     type: number
     default: 1
@@ -436,6 +430,7 @@ parameters:
       - OS::TripleO::Services::Kernel
       - OS::TripleO::Services::ComputeNeutronCorePlugin
       - OS::TripleO::Services::ComputeNeutronOvsAgent
+      - OS::TripleO::Services::ComputeCeilometerAgent
     description: A list of service resources (configured in the Heat
                  resource_registry) which represent nested stacks
                  for each service that should get installed on the Compute Nodes.
@@ -754,7 +749,6 @@ resources:
         type: OS::TripleO::Compute
         properties:
           AdminPassword: {get_param: AdminPassword}
-          CeilometerComputeAgent: {get_param: CeilometerComputeAgent}
           CinderEnableNfsBackend: {get_param: CinderEnableNfsBackend}
           CinderEnableRbdBackend: {get_param: CinderEnableRbdBackend}
           Debug: {get_param: Debug}
