--- a/puppet/services/swift-proxy.yaml
+++ b/puppet/services/swift-proxy.yaml
@@ -17,6 +17,10 @@ parameters:
     description: The password for the swift service account, used by the swift proxy services.
     type: string
     hidden: true
+  SwiftProxyNodeTimeout:
+    default: 60
+    description: Timeout for requests going from swift-proxy to swift a/c/o services.
+    type: number
   SwiftWorkers:
     default: 0
     description: Number of workers for Swift service.
@@ -36,6 +40,7 @@ outputs:
         swift::proxy::authtoken::auth_uri: {get_param: [EndpointMap, KeystoneInternal, uri]}
         swift::proxy::authtoken::identity_uri: {get_param: [EndpointMap, KeystoneAdmin, uri_no_suffix]}
         swift::proxy::authtoken::admin_password: {get_param: SwiftPassword}
+        swift::proxy::node_timeout: {get_param: SwiftProxyNodeTimeout}
         swift::proxy::workers: {get_param: SwiftWorkers}
         swift::keystone::auth::public_url: {get_param: [EndpointMap, SwiftPublic, uri]}
         swift::keystone::auth::internal_url: {get_param: [EndpointMap, SwiftInternal, uri]}
