--- a/puppet/services/neutron-ovs-agent.yaml
+++ b/puppet/services/neutron-ovs-agent.yaml
@@ -37,6 +37,11 @@ parameters:
     description: |
         Comma-separated list of extensions enabled for the Neutron agents.
     type: comma_delimited_list
+  NeutronEnableDVR:
+    default: False
+    description: |
+      Enable support for distributed routing in the OVS Agent.
+    type: boolean
 
 resources:
 
@@ -53,6 +58,7 @@ outputs:
           - get_attr: [NeutronBase, role_data, config_settings]
             neutron::agents::ml2::ovs::enable_tunneling: {get_param: NeutronEnableTunnelling}
             neutron::agents::ml2::ovs::l2_population: {get_param: NeutronEnableL2Pop}
+            neutron::agents::ml2::ovs::enable_distributed_routing: {get_param: NeutronEnableDVR}
             neutron::agents::ml2::ovs::bridge_mappings:
               str_replace:
                 template: MAPPINGS
