--- a/puppet/services/neutron-server.yaml
+++ b/puppet/services/neutron-server.yaml
@@ -29,6 +29,10 @@ parameters:
     description: The password for the nova service and db account, used by nova-api.
     type: string
     hidden: true
+  NeutronEnableDVR:
+    description: Enable Neutron DVR.
+    default: false
+    type: boolean
 
 resources:
 
@@ -85,5 +89,6 @@ outputs:
                 dport: 4789
               '106 vrrp':
                 proto: vrrp
+            neutron::server::router_distributed: {get_param: NeutronEnableDVR}
       step_config: |
         include tripleo::profile::base::neutron::server
