--- a/puppet/services/neutron-l3-compute-dvr.yaml
+++ b/puppet/services/neutron-l3-compute-dvr.yaml
@@ -1,7 +1,8 @@
 heat_template_version: 2016-04-08
 
 description: >
-  OpenStack Neutron L3 agent configured with Puppet
+  OpenStack Neutron L3 agent for DVR enabled compute nodes
+  configured with Puppet
 
 parameters:
   EndpointMap:
@@ -16,15 +17,6 @@ parameters:
     description: Name of bridge used for external network traffic.
     type: string
     default: 'br-ex'
-  NeutronL3AgentMode:
-    description: |
-      Agent mode for L3 agent. Must be one of legacy or dvr_snat.
-    default: 'legacy'
-    type: string
-    constraints:
-      - allowed_values:
-        - legacy
-        - dvr_snat
 
 resources:
 
@@ -33,14 +25,13 @@ resources:
 
 outputs:
   role_data:
-    description: Role data for the Neutron L3 agent service.
+    description: Role data for DVR L3 Agent on Compute Nodes
     value:
-      service_name: neutron_l3
+      service_name: neutron_l3_compute_dvr
       config_settings:
         map_merge:
           - get_attr: [NeutronBase, role_data, config_settings]
           - neutron::agents::l3::external_network_bridge: {get_param: NeutronExternalNetworkBridge}
-            neutron::agents::l3::router_delete_namespaces: True
-            neutron::agents::l3::agent_mode : {get_param: NeutronL3AgentMode}
+            neutron::agents::l3::agent_mode : 'dvr'
       step_config: |
         include tripleo::profile::base::neutron::l3
