SR-IOV nic agent changes in line with composable roles.
This add sriov nic agent as composable service.

Implements: blueprint tripleo-sriov
Depends-On: I3385d831a339deec7d1315f74b501e76109db811

Co-Authored-By: Saravanan KR <skramaja@redhat.com>
Change-Id: I8d920f50da9e4261a9fdf702f7760efaa04a5278

--- a/overcloud-resource-registry-puppet.yaml
+++ b/overcloud-resource-registry-puppet.yaml
@@ -167,6 +167,7 @@ resource_registry:
   OS::TripleO::Services::NeutronOvsAgent: puppet/services/neutron-ovs-agent.yaml
   OS::TripleO::Services::ComputeNeutronOvsAgent: puppet/services/neutron-ovs-agent.yaml
   OS::TripleO::Services::Pacemaker: OS::Heat::None
+  OS::TripleO::Services::NeutronSriovAgent: OS::Heat::None
   OS::TripleO::Services::RabbitMQ: puppet/services/rabbitmq.yaml
   OS::TripleO::Services::HAproxy: puppet/services/haproxy.yaml
   OS::TripleO::Services::Keepalived: puppet/services/keepalived.yaml
